# rmd-testing

./: .gitignore  README.md  minimal_example.Rmd  pyproject.toml
.github/actions/test-minimal-rmd/: action.yml  soup_tests.py
.github/workflows/: knit_tests.yml
