[tool.poetry]
name = "rmdpytest"
version = "0.1.0"
description = "Tools for testing knit rmd files"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
